# Erlang

./: CHANGELOG.md  Erlang.cabal  README.md
src/: Utils.hs
src/CoreErlang/: A.x  B.y  NoAnnType.hs  Pretty.hs  SimpleType.hs  Translate.hs  Type.hs
src/Erlang/: A.x  B.y  Pretty.hs  T.hs  Type.hs
test/: MyLibTest.hs
test/data/src/: a1.erl.Expr  a1.erl.back  array.P  asn1_db.P  asn1ct.P  asn1ct_check.P  asn1ct_constructed_ber_bin_v2.P  asn1ct_constructed_per.P  asn1ct_eval_ext.P  asn1ct_func.P  asn1ct_gen.P  asn1ct_gen_ber_bin_v2.P  asn1ct_gen_check.P  asn1ct_gen_jer.P  asn1ct_gen_per.P  asn1ct_imm.P  asn1ct_name.P  asn1ct_parser2.P  asn1ct_pretty_format.P  asn1ct_rtt.P  asn1ct_table.P  asn1ct_tok.P  asn1ct_value.P  asn1rt_nif.P  base64.P  beam_lib.P  binary.P  c.P  calendar.P  cover.P  cprof.P  dets.P  dets_server.P  dets_sup.P  dets_utils.P  dets_v9.P  dialyzer.P  dialyzer_analysis_callgraph.P  dialyzer_behaviours.P  dialyzer_callgraph.P  (+135 more)
test/generate/test/data/src/: array.erl  asn1_db.erl  asn1ct.erl  asn1ct_check.erl  asn1ct_constructed_ber_bin_v2.erl  asn1ct_constructed_per.erl  asn1ct_eval_ext.erl  asn1ct_func.erl  asn1ct_gen.erl  asn1ct_gen_ber_bin_v2.erl  asn1ct_gen_check.erl  asn1ct_gen_jer.erl  asn1ct_gen_per.erl  asn1ct_imm.erl  asn1ct_name.erl  asn1ct_parser2.erl  asn1ct_pretty_format.erl  asn1ct_rtt.erl  asn1ct_table.erl  asn1ct_tok.erl  asn1ct_value.erl  asn1rt_nif.erl  base64.erl  beam_lib.erl  binary.erl  c.erl  calendar.erl  cover.erl  cprof.erl  dets.erl  dets_server.erl  dets_sup.erl  dets_utils.erl  dets_v9.erl  dialyzer.erl  dialyzer_analysis_callgraph.erl  dialyzer_behaviours.erl  dialyzer_callgraph.erl  dialyzer_cl.erl  dialyzer_clean_core.erl  (+128 more)
